// The MIT License
//
// Copyright (c) 2020 Temporal Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

// TaskSource is the source from which a task was produced.
enum TaskSource {
    TASK_SOURCE_UNSPECIFIED = 0;
    // Task produced by history service.
    TASK_SOURCE_HISTORY = 1;
    // Task produced from matching db backlog.
    TASK_SOURCE_DB_BACKLOG = 2;
}

enum TaskType {
    TASK_TYPE_UNSPECIFIED = 0;
    TASK_TYPE_REPLICATION_HISTORY = 1;
    TASK_TYPE_REPLICATION_SYNC_ACTIVITY = 2;
    TASK_TYPE_TRANSFER_WORKFLOW_TASK = 3;
    TASK_TYPE_TRANSFER_ACTIVITY_TASK = 4;
    TASK_TYPE_TRANSFER_CLOSE_EXECUTION = 5;
    TASK_TYPE_TRANSFER_CANCEL_EXECUTION = 6;
    TASK_TYPE_TRANSFER_START_CHILD_EXECUTION = 7;
    TASK_TYPE_TRANSFER_SIGNAL_EXECUTION = 8;
    reserved 9; // TASK_TYPE_TRANSFER_RECORD_WORKFLOW_STARTED
    TASK_TYPE_TRANSFER_RESET_WORKFLOW = 10;
    reserved 11; // TASK_TYPE_TRANSFER_UPSERT_WORKFLOW_SEARCH_ATTRIBUTES
    TASK_TYPE_WORKFLOW_TASK_TIMEOUT = 12;
    TASK_TYPE_ACTIVITY_TIMEOUT = 13;
    TASK_TYPE_USER_TIMER = 14;
    TASK_TYPE_WORKFLOW_RUN_TIMEOUT = 15;
    TASK_TYPE_DELETE_HISTORY_EVENT = 16;
    TASK_TYPE_ACTIVITY_RETRY_TIMER = 17;
    TASK_TYPE_WORKFLOW_BACKOFF_TIMER = 18;
    TASK_TYPE_VISIBILITY_START_EXECUTION = 19;
    TASK_TYPE_VISIBILITY_UPSERT_EXECUTION = 20;
    TASK_TYPE_VISIBILITY_CLOSE_EXECUTION = 21;
    TASK_TYPE_VISIBILITY_DELETE_EXECUTION = 22;
    reserved 23;
    TASK_TYPE_TRANSFER_DELETE_EXECUTION = 24;
    TASK_TYPE_REPLICATION_SYNC_WORKFLOW_STATE = 25;
    TASK_TYPE_ARCHIVAL_ARCHIVE_EXECUTION = 26;
    // An immediate outbound task generated by a state machine.
    // Outbound tasks specify a destination that is used to group tasks into a per namespace-and-destination
    // scheduler.
    TASK_TYPE_STATE_MACHINE_OUTBOUND = 27;
    // A timer task generated by a state machine.
    TASK_TYPE_STATE_MACHINE_TIMER = 28;

    // Timeout task for the entire workflow execution chain.
    TASK_TYPE_WORKFLOW_EXECUTION_TIMEOUT = 29;

    TASK_TYPE_REPLICATION_SYNC_HSM = 30;
}

// TaskPriority is only used for replication task as of May 2024
enum TaskPriority {
    TASK_PRIORITY_UNSPECIFIED = 0;
    TASK_PRIORITY_HIGH = 1;
    // gap between index can be used for future priority levels if needed
    TASK_PRIORITY_LOW = 10;
}
